--- a/index.html
+++ b/index.html
@@ -1,1 +1,73 @@
-ola mundo
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Título do Meu Site</title>
+    <link rel="stylesheet" href="css/style.css">
+    </head>
+<body>
+
+    <header>
+        <h1>Nome do Meu Site</h1>
+        <nav>
+            <ul>
+                <li><a href="#inicio">Início</a></li>
+                <li><a href="#sobre">Sobre Nós</a></li>
+                <li><a href="#servicos">Serviços</a></li>
+                <li><a href="#contato">Contato</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section id="inicio">
+            <h2>Bem-vindo!</h2>
+            <p>Este é o conteúdo principal da sua página inicial.</p>
+            <img src="img/exemplo-banner.jpg" alt="Um banner ilustrativo">
+        </section>
+
+        <section id="sobre">
+            <h2>Sobre Nós</h2>
+            <p>Conte um pouco sobre a sua empresa, projeto ou você mesmo. Use esta seção para dar mais detalhes.</p>
+        </section>
+
+        <section id="servicos">
+            <h2>Nossos Serviços</h2>
+            <ul>
+                <li>Desenvolvimento Web</li>
+                <li>Design Gráfico</li>
+                <li>Marketing Digital</li>
+            </ul>
+        </section>
+
+        <section id="contato">
+            <h2>Entre em Contato</h2>
+            <p>Preencha o formulário abaixo para nos enviar uma mensagem.</p>
+            <form action="#" method="POST">
+                <label for="nome">Nome:</label><br>
+                <input type="text" id="nome" name="nome" required><br><br>
+
+                <label for="email">Email:</label><br>
+                <input type="email" id="email" name="email" required><br><br>
+
+                <label for="mensagem">Mensagem:</label><br>
+                <textarea id="mensagem" name="mensagem" rows="5" required></textarea><br><br>
+
+                <button type="submit">Enviar Mensagem</button>
+            </form>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 Nome do Seu Site. Todos os direitos reservados.</p>
+        <div class="redes-sociais">
+            <a href="#" target="_blank">Facebook</a>
+            <a href="#" target="_blank">Instagram</a>
+            <a href="#" target="_blank">LinkedIn</a>
+        </div>
+    </footer>
+
+    <script src="js/script.js"></script>
+</body>
+</html>
