--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <header>
-        <h1>Nome do Meu Site</h1>
+        <h1>Agrinho</h1>
         <nav>
             <ul>
                 <li><a href="#inicio">Início</a></li>
@@ -69,4 +69,3 @@
     </footer>
 
     <script src="js/script.js"></script>
-</body>
