--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <section id="sobre">
             <h2>Sobre Nós</h2>
-            <p>Conte um pouco sobre a sua empresa, projeto ou você mesmo. Use esta seção para dar mais detalhes.</p>
+            <p>Nosso projeto baseia-se na estrutura do campo e da cidade.</p>
         </section>
 
         <section id="servicos">
