--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
 
         <section id="sobre">
             <h2>Sobre Nós</h2>
-            <p>Nosso projeto baseia-se na estrutura do campo e da cidade.</p>
+            <p>Nosso projeto baseia-se na estrutura do campo e da cidade.
+                O campo e a cidade! Dois mundos tão diferentes, mas ambos com seus charmes e desafios
+            </p>
         </section>
 
         <section id="servicos">
