--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
             <h2>Sobre Nós</h2>
             <p>Nosso projeto baseia-se na estrutura do campo e da cidade.
                 O campo e a cidade! Dois mundos tão diferentes, mas ambos com seus charmes e desafios
+                O campo é sinônimo de paz, natureza e simplicidade. È onde podemos encontrar vastos espaços verdes,
+                animais pastando e o som dos pássaros cantando. È um lugar onde o tempo parece passar mais
+                devagar e podemos nos desconectar do estresse diário 
             </p>
         </section>
 
