--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <section id="inicio">
             <h2>Bem-vindo!</h2>
             <p>Este é o conteúdo principal da sua página inicial.</p>
-            <img src="img/exemplo-banner.jpg" alt="Um banner ilustrativo">
+            <img src="img/exemplo-banner.jpg" alt="agitação diversidade e movimento constante.">
         </section>
 
         <section id="sobre">
