--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </section>
 
         <section id="sobre">
-            <h2>Sobre Nós</h2>
+            <h2>Nós </h2>
             <p>Nosso projeto baseia-se na estrutura do campo e da cidade.
                 O campo e a cidade! Dois mundos tão diferentes, mas ambos com seus charmes e desafios
                 O campo é sinônimo de paz, natureza e simplicidade. È onde podemos encontrar vastos espaços verdes,
@@ -38,7 +38,7 @@
         </section>
 
         <section id="servicos">
-            <h2>Nossos Serviços</h2>
+            <h2>Nosso trabalho </h2>
             <ul>
                 <li>Desenvolvimento Web</li>
                 <li>Design Gráfico</li>
